--- a/bio-list.tex
+++ b/bio-list.tex
@@ -72,10 +72,6 @@ guidelines.
 ../hid-sp18-519/technology/abstract-denodo.tex
 ../hid-sp18-519/technology/abstract-spagobi.tex
 ../hid-sp18-519/technology/abstract-systemml.tex
-../hid-sp18-522/technology/abstract-aws-deeplens.tex
-../hid-sp18-522/technology/abstract-aws-fargate.tex
-../hid-sp18-522/technology/abstract-aws-lightshell.tex
-../hid-sp18-522/technology/abstract-the-go-language.tex
 ../hid-sp18-524/technology/abstract-CenOS.tex
 ../hid-sp18-524/technology/abstract-GCP-BD.tex
 ../hid-sp18-524/technology/abstract-GCP-CD.tex
@@ -93,23 +89,24 @@ guidelines.
 \chapter{New Technologies}
 \section{Apache Ambari}  
 
-Ambari is a software  to manage Hadoop environment
-efficiently by providing services like managing, monitoring and provisioning to
-the hadoop clusters~\cite{hid-sp18-401-wiki-Ambari}.
+Ambari is a software  to manage Hadoop environment efficiently by providing
+services like managing, monitoring and provisioning to the hadoop clusters~\cite
+{hid-sp18-401-wiki-Ambari}.
 
 When Apache Hadoop started developing with aim of increasing its scalability,
 several application layers started to cover its architecture like Pig, Hive,
 HBase etc.\ making the management of Hadoop architecture bulky and unmanageable,
 and several problems were faced by the developers in handling large hadoop
-clusters. Ambari is developed aiming to be the solution to the above problems
+clusters. Ambari is developed aiming to be the solution to the above problems.
 
 
 Apache architecture includes two main components - Ambari Server and Ambari
 Agent. Ambari supports 64 bit OS like RHEL 5 (Redhat enterprise Linux), RHEL 6,
-CentOS 5, CentOS 6 etc.~\cite{hid-sp18-401-Ambari}. Ambari provided monitoring
+CentOS 5, CentOS 6 etc~\cite{hid-sp18-401-Ambari}. Ambari provided monitoring
 services through tools like Dashboard views - which shows cluster health and
 cluster status, also by collecting different metrics like Job status, Maps slots
 utilization, garbage collection.
+
 
 
 
@@ -122,8 +119,17 @@ ERROR: index is missing
 \href{https://github.com/cloudmesh-community/hid-sp18-401/blob/master//technology/abstract-apache-ambari.tex}{abstract-apache-ambari.tex}
 
  
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 1 in ../hid-sp18-401/technology/abstract-apache-ambari.tex line 4:
+Command terminated with space. services like managing, monitoring and
+provisioning to the hadoop clusters~\cite
+^
+\end{verbatim}
+\end{tiny}
 
-Wordcount: 130
+Wordcount: 131
 
 
 Quote ratio: 0.00 \%
@@ -131,28 +137,132 @@ Quote ratio: 0.00 \%
 Max Line length: 80
 \end{IU}
 
+ERROR: Illegal quotes in the file skipping inclusion. Please fix the folllowing file:
+
+\begin{IU}
+
+hid-sp18-401
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-401/blob/master//technology/abstract-apache-impala.tex}{abstract-apache-impala.tex}
+
+ 
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 18 in ../hid-sp18-401/technology/abstract-apache-impala.tex line 9: Use
+either `` or '' as an alternative to `"'. data stored and run in Apache Hadoop
+clusters. "It enables users to issue low-
+^ Warning 18 in ../hid-sp18-401/technology/abstract-apache-impala.tex line 11:
+Use either `` or '' as an alternative to `"'. data movement or
+transformation"~\cite{hid-sp18-401-apache-Impala}.
+^
+\end{verbatim}
+\end{tiny}
+
+Wordcount: 77
+
+ERROR: This abstract is too short.
+
+
+Quote ratio: 0.00 \%
+ 
+Max Line length: 78
+\end{IU}
+
+ERROR: Illegal quotes in the file skipping inclusion. Please fix the folllowing file:
+
+\begin{IU}
+
+hid-sp18-401
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-401/blob/master//technology/abstract-keras.tex}{abstract-keras.tex}
+
+ 
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 18 in ../hid-sp18-401/technology/abstract-keras.tex line 3: Use either
+`` or '' as an alternative to `"'. "Keras is a high-level neural networks API,
+written in Python and capable of   ^ Warning 18 in ../hid-
+sp18-401/technology/abstract-keras.tex line 4: Use either `` or '' as an
+alternative to `"'. running on top of TensorFlow, CNTK or Theano"~\cite{hid-
+sp18-401-keras}.                                               ^
+\end{verbatim}
+\end{tiny}
+
+Wordcount: 117
+
+WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+
+
+Quote ratio: 0.00 \%
+ 
+Max Line length: 80
+\end{IU}
+
+ERROR: Illegal quotes in the file skipping inclusion. Please fix the folllowing file:
+
+\begin{IU}
+
+hid-sp18-401
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-401/blob/master//technology/abstract-lightgbm.tex}{abstract-lightgbm.tex}
+
+ 
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 18 in ../hid-sp18-401/technology/abstract-lightgbm.tex line 3: Use
+either `` or '' as an alternative to `"'. "A fast, distributed, high performance
+gradient boosting(GBDT, GBRT, GBM or   ^ Warning 36 in ../hid-
+sp18-401/technology/abstract-lightgbm.tex line 3: You should put a space in
+front of parenthesis. "A fast, distributed, high performance gradient
+boosting(GBDT, GBRT, GBM or
+^ Warning 18 in ../hid-sp18-401/technology/abstract-lightgbm.tex line 6: Use
+either `` or '' as an alternative to `"'. of the DMTK project of
+Microsoft"~\cite{hid- sp18-401-lightgbm}.                                   ^
+Warning 36 in ../hid-sp18-401/technology/abstract-lightgbm.tex line 14: You
+should put a space in front of parenthesis. boosting models on huge
+datasets(that sometimes contain more than 500,000
+^
+\end{verbatim}
+\end{tiny}
+
+Wordcount: 143
+
+
+Quote ratio: 0.00 \%
+ 
+Max Line length: 78
+\end{IU}
+
 \section{XGBoost} 
 
-\color{blue}``\emph{XGBoost is an open-source software library which provides the
-gradient boosting framework for C++, Java, Python,R, and Julia.}''\color{black}
-~\cite{hid-sp18-401-XGBoost-wiki}.
+\color{blue}``\emph{XGBoost is an open-source software library which provides the gradient
+boosting framework for C++, Java, Python,R, and Julia}''\color{black} ~\cite{hid-sp18-401
+-XGBoost-wiki}.
 
-XGBoost stands for Extreme Gradient Boosting. Before talking about
-XGBoost, it is best to give introduction to general gradient
-boosting. Gradient Boosting is a machine learning technique used to
-build both regression and classification models. It is primarily used
-in building decision trees. But building gradient boosting models on
-huge datasets (that sometimes contain more than 500,000 observations)
-is computationally onerous, not so efficient.  \color{blue}``\emph{The name xgboost,
-though, actually refers to the engineering goal to push the limit of
-computations resources for boosted tree algorithms. Which is the
-reason why many people use xgboost}''\color{black}.  - says Tianqi Chen, creator of
-XGBoost (later received contributions from many
-developers).~\cite{hid-sp18-401-XGBoost-gen}. The description of
-XGBoost according to the software repository on github is \color{blue}``\emph{Scalable,
-Portable and Distributed Gradient Boosting (GBDT, GBRT or GBM)
-Library, for Python, R, Java, Scala, C++ and
-more}''\color{black}.~\cite{hid-sp18-401-XGBoost-git}.
+XGBoost stands for Extreme Gradient Boosting. Before talking about XGBoost, it
+is best to give introduction to general gradient boosting. Gradient Boosting
+is a machine learning technique used to build both regression and
+classification models. It is primarily used in building decision trees. But
+building gradient boosting models on huge datasets (that sometimes contain
+more than 500,000 observations) is computationally onerous, not so efficient.
+\color{blue}``\emph{The name xgboost, though, actually refers to the engineering goal to push
+the limit of computations resources for boosted tree algorithms. Which is the
+reason why many people use xgboost}''\color{black}.  - says Tianqi Chen, creator of XGBoost
+(later received contributions from many developers)~\cite{hid-sp18-401
+-XGBoost-gen}. The description of XGBoost according to the software repository
+on github is \color{blue}``\emph{Scalable, Portable and Distributed Gradient Boosting (GBDT,
+GBRT or GBM) Library, for Python, R, Java, Scala, C++ and more}''\color{black}~\cite{hid-
+sp18-401-XGBoost-git}.
+
 
 
 \begin{IU}
@@ -164,15 +274,23 @@ ERROR: index is missing
 \href{https://github.com/cloudmesh-community/hid-sp18-401/blob/master//technology/abstract-xgboost.tex}{abstract-xgboost.tex}
 
  
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 39 in ../hid-sp18-401/technology/abstract-xgboost.tex line 4: Double
+space found. boosting framework for C++, Java, Python,R, and Julia'' ~\cite{hid-
+sp18-401                                                          ^
+\end{verbatim}
+\end{tiny}
 
-Wordcount: 142
+Wordcount: 146
 
 
-Quote ratio: 36.59 \%
+Quote ratio: 36.51 \%
 
 WARNING: Quote ratio very high
  
-Max Line length: 87
+Max Line length: 93
 \end{IU}
 
 \section{Apatar}
@@ -4925,6 +5043,230 @@ Quote ratio: 0.00 \%
 Max Line length: 94
 \end{IU}
 
+\section{Blockchain}
+\index{Blockchain}
+
+A blockchain is a continuously growing list of linked records, called
+blocks. The most recent transactions are recorded and added to it in
+chronological order, it allows the public to keep track of all
+transactions in the chain without central recordkeeping. Each computer
+participating in the blockchain gets a copy of the data which is
+downloaded automatically.
+
+Blockchains are decentralized by design and provide a new level of the
+way we trust data. For use as a distributed ledger, a blockchain is
+typically managed by a peer-to-peer network on the internet
+collectively agreeing to a protocol for validating new blocks. Once
+recorded, the data in any given block cannot be changed. One computer
+trying to tamper a record would have to beat all the computers in the
+network that are verifying the transactions. Thus tampering is very
+close to impossibility.
+
+Blockchains \color{blue}``\emph{are an example of a distributed computing system with
+high Byzantine fault tolerance. Decentralized consensus has therefore
+been achieved with a blockchain. This makes blockchains potentially
+suitable for the recording of events, medical records, and other
+records management activities, such as identity management,
+transaction processing, documenting provenance, food traceability or
+voting}''\color{black} ~\cite{hid-sp18-506-Blockchain}.
+
+
+\begin{IU}
+
+hid-sp18-506
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-blockchain.tex}{abstract-blockchain.tex}
+
+ 
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 39 in ../hid-sp18-506/technology/abstract-blockchain.tex line 26: Double
+space found. voting'' ~\cite{hid-sp18-506-Blockchain}.           ^
+\end{verbatim}
+\end{tiny}
+
+Wordcount: 173
+
+
+Quote ratio: 29.35 \%
+ 
+Max Line length: 85
+\end{IU}
+
+\section{Ethereum}
+\index{Ethereum}
+
+Ethereum is an open-source, public, distributed computing that \color{blue}``\emph{runs
+smart contracts: applications that run exactly as programmed without
+any possibility of downtime, censorship, fraud or third-party
+interference}''\color{black} ~\cite{hid-sp18-506-EthereumOrg}.
+
+A smart contract is a computer protocol intended to digitally
+facilitate, verify, or enforce the negotiation or performance of a
+contract without third parties which means there is no need for
+\emph{middlemen} like lawyers or notaries. In theory, this means that
+you can carry out transactions without the waiting times inherent to
+paper filings, and without paying fees to whoever would typically
+oversee such a transaction. This is particularly important for people
+living in countries where the legal system is corrupt, or woefully
+inefficient. These transactions are trackable and irreversible.
+
+Although smart contract technology is still a very new, it has a wide
+range of potential applications like as voting, global supply chains,
+medical records, the financial system. It is very promising it is
+believed that its full potential has yet to be discovered.
+
+
+\begin{IU}
+
+hid-sp18-506
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-ethereum.tex}{abstract-ethereum.tex}
+
+ 
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 39 in ../hid-sp18-506/technology/abstract-ethereum.tex line 7: Double
+space found. interference'' ~\cite{hid-sp18-506-EthereumOrg}.                 ^
+\end{verbatim}
+\end{tiny}
+
+Wordcount: 146
+
+
+Quote ratio: 13.59 \%
+ 
+Max Line length: 87
+\end{IU}
+
+\section{ID2020}
+\index{ID2020}
+
+ID2020 is a new software tool sponsored by the United Nations. It will
+let millions of refugees and other without documents whip out a phone
+or other device to quickly show who they are and where they came
+from. The tool, developed in part by Microsoft and Accenture, combines
+biometric data (like a fingerprint or an iris scan) and a new form of
+record-keeping technology, known as the blockchain, to create a
+permanent identity.
+ 
+The rapid proliferation of smart devices globally, combined with
+ever-increasing computing power and rapidly expanding broadband
+coverage, enables new methods of registration and facilitates ongoing
+interaction between individuals and their identity data.
+ 
+\color{blue}``\emph{An estimated 1.1 billion people, including many millions of
+children, women and refugees, globally lack any form of officially
+recognized identification. Without an identity, individuals are often
+invisible - unable to vote, access healthcare, open a bank account, or
+receive an education - and bear higher risk for trafficking. Without
+accurate population data, public and private organizations struggle to
+broadly and accurately deliver the most basic human
+services}''\color{black}~\cite{hid-sp18-506-NoID}.
+
+
+\begin{IU}
+
+hid-sp18-506
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-id2020.tex}{abstract-id2020.tex}
+
+ 
+
+Wordcount: 158
+
+
+Quote ratio: 38.33 \%
+
+WARNING: Quote ratio very high
+ 
+Max Line length: 79
+\end{IU}
+
+\section{Ripple Transaction Protocol}
+\index{Ripple Transaction Protocol}
+\index{Ripple}
+
+Ripple Transaction Protocol is an open-source protocol that allows
+transfer of anything of value (usually payments) on the internet.
+
+\color{blue}``\emph{The Ripple network enables secure, instant and nearly free global
+financial transactions of any size with no chargebacks.}''\color{black}
+\cite{hid-sp18-506-RippleNetwork} \color{blue}``\emph{Ripple provides one frictionless
+experience to send money globally using the power of
+blockchain}''\color{black}~\cite{hid-sp18-506-GlobalPayment}.
+
+
+There are 3 problems that ripple are trying to solve in the current
+payment systems available now- high fees, charges for currency
+exchanges and processing delays.
+
+Banks today built their own system for their customers that dont
+easily interact with each other. The Ripple network is designed to
+connect different payment systems together.
+
+
+\begin{IU}
+
+hid-sp18-506
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-ripple.tex}{abstract-ripple.tex}
+
+ 
+
+Wordcount: 97
+
+ERROR: This abstract is too short.
+
+
+Quote ratio: 26.21 \%
+ 
+Max Line length: 86
+\end{IU}
+
+\section{Scikit-learn}
+\index{Scikit-learn}
+
+A Google Summer of Code project, scikit-learn project is a
+machine-learning library.  Written in Python, it is designed to be
+simple and efficient, accessible to non-experts, and reusable in
+various contexts. Its goal is to provide a set of common algorithms to
+Python users through a consistent interface.
+
+This package focuses on bringing machine learning to non-specialists
+using a general-purpose high-level language that is easy to
+follow. \color{blue}``\emph{Emphasis is put on ease of use, performance, documentation,
+and API consistency. It has minimal dependencies and is distributed
+under the simplified BSD license, encouraging its use in both academic
+and commercial settings. Source code, binaries, and documentation can
+be downloaded from http://scikit-learn.sourceforge.net}''\color{black}
+~\cite{hid-sp18-506-Scikit-learn}.
+
+
+
+\begin{IU}
+
+hid-sp18-506
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-scikit-learn.tex}{abstract-scikit-learn.tex}
+
+ 
+
+Wordcount: 100
+
+WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+
+
+Quote ratio: 37.92 \%
+
+WARNING: Quote ratio very high
+ 
+Max Line length: 87
+Error: URL found, use citation instead
+\end{IU}
+
 \section{Cascading}
 
 Cascading is an open source data processing project started in early
@@ -5312,24 +5654,26 @@ Max Line length: 77
 \end{IU}
 
 \section{Apttus}
-\index{CRM}
-\index{AI}
-\index{Quote-to-cash}
+\index{CRM} \index{AI} \index{Quote-to-cash}
 
-Apttus provides various products for Customer Relationship Management
-s (CRM) and use artificial intelligence (AI) to maximize the customer
-revenue. These products help customer to automate the process and
-maximize the revenue with artificial intelligence (AI). Apttus
-products include Enterprise Contract Management, Quote-to-Cash,
-Configure Price Quote, Business to Business (B2B) E-Commerce, Buy-Side
-Contract Management and Revenue Management. Apttus Quote-to-Cash
+Apttus provide various products for Customer Relationship Management
+(CRM) and use artificial intelligence (AI) to maximize the customer
+revenue. These product help customer to automate the process and
+maximize the revenue with artificial intelligence (AI)
+technology. Apttus product include Enterprise Contract Management,
+Quote-to-Cash, Configure Price Quote, Business to Business (B2B)
+E-Commerce, Buy-Side Contract Management and Revenue Management. These
+are the industry standard process and Apttus help to automate these
+process by using artificial intelligence . Apttus Quote-to-Cash
 artificial intelligent product used for automating the end to end
 process of customer's intent to buy the product and ultimately
-customer buying the product. Quote-to-Cash artificial intelligent
+customer buying the product. The Quote-to-cash process start with the
+buyer's intention to buy the product and ends with the cash in the
+bank of your organization. Quote-to-Cash artificial intelligent
 product take care of all the steps involved in the Quote-to-cash
 process and provide full automation of customer relationship life
 cycle. These steps requires very less human intervention. This product
-helps in increasing the revenue of the customer as Quote-to-Cash is
+help in increasing the revenue of the customer as Quote-to-Cash is
 heart of the business. Apttus provide both on premise and cloud
 products~\cite{hid-sp18-511-apttus}.
  
@@ -5342,10 +5686,21 @@ hid-sp18-511
 \href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-apttus.tex}{abstract-apttus.tex}
 
  
+chktex:
+\begin{tiny}
+\begin{verbatim}
+Warning 24 in ../hid-sp18-511/technology/abstract-apttus.tex line 2: Delete this
+space to maintain correct pagereferences. \index{CRM} \index{AI} \index{Quote-
+to-cash}              ^ Warning 24 in ../hid-sp18-511/technology/abstract-
+apttus.tex line 2: Delete this space to maintain correct pagereferences.
+\index{CRM} \index{AI} \index{Quote-to-cash}                         ^ Warning
+26 in ../hid-sp18-511/technology/abstract-apttus.tex line 12: You ought to
+remove spaces in front of punctuation. process by using artificial intelligence
+. Apttus Quote-to-Cash                                           ^
+\end{verbatim}
+\end{tiny}
 
-Wordcount: 125
-
-WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+Wordcount: 164
 
 
 Quote ratio: 0.00 \%
@@ -7402,25 +7757,24 @@ Max Line length: 99
 \section{RabbitMQ}
 \index{RabbitMQ}
 
-RabbitMQ technology is open source message broker, which supports multiple 
-messaging protocols. It has many features such as asynchronous messaging, 
+RabbitMQ technology is open source message broker, which supports multiple
+messaging protocols. It has many features such as asynchronous messaging,
 which supports message queuing, receive and deliver acknowledgments, routing
 any message queues with broadcasting to logs or messages to multiple users.
 \color{blue}``\emph{A RabbitMQ broker is a logical grouping of one or
 several Erlang nodes, each running the RabbitMQ application and sharing users,
-virtual hosts, queues, exchanges, bindings, and runtime parameters. Sometimes 
+virtual hosts, queues, exchanges, bindings, and runtime parameters. Sometimes
 we refer to the collection of nodes as a 
 cluster}''\color{black}~\cite{hid-sp18-520-RabbitMQCluster}.
-\color{blue}``\emph{RabbitMQ has pluggable support for various SASL authentication mechanisms. 
-Among many, with PLAIN authentication, its enabled by default in the RabbitMQ 
+\color{blue}``\emph{RabbitMQ has pluggable support for various SASL authentication mechanisms.
+Among many, with PLAIN authentication, its enabled by default in the RabbitMQ
 server and clients}''\color{black}~\cite{hid-sp18-520-RabbitMQauth}.
-\color{blue}``\emph{It was originally implemented Advance Message Queuing Protocoland has been 
-extended to support Streaming Text Oriented Messaging Protocol and other 
-protocols}''\color{black}~\cite{hid-sp18-520-RabbitMQ-wiki}.
-\color{blue}``\emph{The rabbitmq-management plugin provides an HTTP-based API for management and 
-monitoring of your RabbitMQ server, along with a browser-based UI and a 
-command line tool, rabbitmqadmin}''\color{black}~\cite{hid-sp18-520-RabbitMQ-mana}.
-
+\color{blue}``\emph{It was originally implemented Advance Message Queuing Protocoland has been
+extended to support Streaming Text Oriented Messaging Protocol and other
+protocols}''\color{black}~\cite{hid-sp18-520-RabbitMQwiki}.
+\color{blue}``\emph{The rabbitmq-management plugin provides an HTTP-based API for management and
+monitoring of your RabbitMQ server, along with a browser-based UI and a
+command line tool, rabbitmqadmin}''\color{black}~\cite{hid-sp18-520-RabbitMQmana}.
 
 \begin{IU}
 
@@ -7430,14 +7784,14 @@ hid-sp18-520
 
  
 
-Wordcount: 145
+Wordcount: 136
 
 
-Quote ratio: 58.20 \%
+Quote ratio: 58.71 \%
 
 ERROR: Quote ratio too high
  
-Max Line length: 97
+Max Line length: 96
 \end{IU}
 
 \section{Redis}
@@ -7692,6 +8046,231 @@ Wordcount: 153
 Quote ratio: 0.00 \%
  
 Max Line length: 76
+\end{IU}
+
+\section{AWS DeepLens}
+
+\color{blue}``\emph{ AWS DeepLens is the world's first video camera optimized to run
+machine learning models and perform inference on the device. It comes
+with 6 sample projects at launch, that you can deploy to your AWS
+DeepLens in less than 10 minutes. You can run the sample projects as
+is, connect them with other AWS services train a model in Amazon
+Sagemaker and deploy it to AWS DeepLens, or extend the functionality
+by triggering a lambda function when an action takes place. You can
+even apply more advanced analytics on the cloud using Amazon Kinesis
+Video Streams and Amazon Rekognition video.  AWS DeepLens provides the
+building blocks for your machine learning
+needs}''\color{black}\cite{hid-sp18-522-deeplens}.
+
+
+Several Features of AWS DeepLens are as below: 
+
+\begin{description}
+	\item[Integrated with AWS]
+	\item[Build custom models with Amazon SageMaker]
+	\item[Broad framework support]
+	\item[Fully programmable]
+	\item[Custom built for deep learning]
+	
+\end{description}
+
+
+\begin{IU}
+
+hid-sp18-522
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSDeepLens.tex}{abstract-AWSDeepLens.tex}
+
+ 
+
+Wordcount: 126
+
+WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+
+
+Quote ratio: 66.04 \%
+
+ERROR: Quote ratio too high
+ 
+Max Line length: 84
+\end{IU}
+
+\section{Amazon Fargate}
+
+\color{blue}``\emph{AWS Fargate is a technology for Amazon ECS and EKS$*$ that allows you to run 
+containers without having to manage servers or clusters. With AWS Fargate, you 
+no longer have to provision, configure, and scale clusters of virtual machines 
+to run containers. This removes the need to choose server types, decide when
+to scale your clusters, or optimize cluster packing. AWS Fargate removes the 
+need for you to interact with or think about servers or clusters. Fargate lets 
+you focus on designing and building your applications instead of managing
+the infrastructure that runs them.}''\color{black}~\cite{hid-sp18-522-fargate}
+
+\color{blue}``\emph{Amazon ECS and EKS have two modes: Fargate launch type and EC2 launch type.
+With Fargate launch type, all you have to do is package your application in 
+containers, specify the CPU and memory requirements, define networking and 
+IAM policies, and launch the application. EC2 launch type allows you to have 
+server-level, more granular control over the infrastructure that runs your
+container applications. With EC2 launch type, you can use Amazon ECS and EKS
+to manage a cluster of servers and schedule placement of containers on the 
+servers. Amazon ECS and EKS keeps track of all the CPU, memory and other 
+resources in your cluster, and also finds the best server for a container to
+run on based on your specified resource requirements. You are responsible
+for provisioning, patching, and scaling clusters of servers. You can decide
+which type of server to use, which applications and how many containers to
+run in a cluster to optimize utilization, and when you should add or remove
+servers from a cluster. EC2 launch type gives you more control of your serve
+clusters and provides a broader range of customization options, which might
+be required to support some specific applications or possible compliance and
+government requirements.}''\color{black}~\cite{hid-sp18-522-fargate}
+
+
+\begin{IU}
+
+hid-sp18-522
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSFargate.tex}{abstract-AWSFargate.tex}
+
+ 
+
+Wordcount: 283
+
+
+Quote ratio: 92.88 \%
+
+ERROR: Quote ratio too high
+ 
+Max Line length: 97
+\end{IU}
+
+\section{Amazon Lightsail}
+
+Amazon Lightsail is amazon virtual server. It provides virtual private
+servers which are pre-configured with storage where applications can
+be deployed and managed.
+
+\color{blue}``\emph{Amazon Lightshell provides developers compute, storage, and
+networking capacity and capabilities to deploy and manage websites and
+web applications in the cloud.  Several features include Virtual
+Private Server, Powerful API, Highly available storage, Speedy and
+secure networking, Access to AWS Simplified load
+balancing}''\color{black}\cite{hid-sp18-522-lightsail}.
+
+LightSail provides SSD based storage, a static IP at a very competing
+price.  It has snapshot which has stored backup of each nodes that are
+set-up.  Static IP address can be created which are fixed and assigned
+to instances.  It provides two OS Amazon Linux and Ubuntu.
+
+
+
+\begin{IU}
+
+hid-sp18-522
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSLightsail.tex}{abstract-AWSLightsail.tex}
+
+ 
+
+Wordcount: 106
+
+WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
+
+
+Quote ratio: 38.95 \%
+
+WARNING: Quote ratio very high
+ 
+Max Line length: 79
+\end{IU}
+
+\section{The GO Programming Language}
+
+\color{blue}``\emph{Go is an open source programming language that makes it easy to
+build simple, reliable, and efficient software. It has been developed
+by a team at Google and many contributors from the open source 
+community.}''\color{black}~\cite{hid-sp18-522-golanguage}.
+
+\color{blue}``\emph{Go is expressive, concise, clean, and efficient. Its concurrency
+mechanisms make it easy to write programs that get the most out of
+multicore and networked machines, while its novel type system enables
+flexible and modular program construction. Go compiles quickly to
+machine code yet has the convenience of garbage collection and the
+power of run-time reflection. It's a fast, statically typed, compiled
+language that feels like a dynamically typed, interpreted
+language}''\color{black}~\cite{hid-sp18-522-golanguage}.
+
+
+
+
+\begin{IU}
+
+hid-sp18-522
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-TheGoLanguage.tex}{abstract-TheGoLanguage.tex}
+
+ 
+
+Wordcount: 99
+
+ERROR: This abstract is too short.
+
+
+Quote ratio: 81.96 \%
+
+ERROR: Quote ratio too high
+ 
+Max Line length: 84
+\end{IU}
+
+\section{RIOT OS}
+
+\color{blue}``\emph{RIOT is a small operating system for networked, memory-constrained
+systems with a focus on lowpowerwireless Internet of Things (IoT) devices.
+It is open-source software, released under the GNU Lesser General
+Public License (LGPL). Due to this unclonable license and its large
+independent community RIOT is often referred to as the Linux of the
+Internet of Things}''\color{black}~\cite{hid-sp18-522-riot}.
+
+Features of RIOT OS\:
+
+\begin{itemize}
+\item Standard programming in C or C++
+\item Standard tools such as gcc, gdb
+\item Minimized hardware dependent code
+\item Multi-threading with ultra-low threading overhead
+\item Static and dynamic memory allocation
+\item Code footprint flexibility, Robustness
+\end{itemize}
+
+
+\begin{IU}
+
+hid-sp18-522
+
+ERROR: index is missing
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-riotos-a.tex}{abstract-riotos-a.tex}
+
+ 
+
+Wordcount: 85
+
+ERROR: This abstract is too short.
+
+
+Quote ratio: 49.41 \%
+
+WARNING: Quote ratio very high
+ 
+Max Line length: 86
 \end{IU}
 
 \section{Google Dremel}
@@ -9356,6 +9935,16 @@ hid-sp18-506
 
 \url{https://github.com/cloudmesh-community/hid-sp18-506/issues}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-scikit-learn.tex}{abstract-scikit-learn.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-ripple.tex}{abstract-ripple.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-blockchain.tex}{abstract-blockchain.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-id2020.tex}{abstract-id2020.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/abstract-ethereum.tex}{abstract-ethereum.tex}
+
 \href{https://github.com/cloudmesh-community/hid-sp18-506/blob/master//technology/hid-sp18-506.bib}{../hid-sp18-506/technology/hid-sp18-506.bib}
 
 \end{IU}
@@ -9750,6 +10339,29 @@ hid-sp18-521
 \href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-emr.tex}{abstract-emr.tex}
 
 \href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/hid-sp18-521.bib}{../hid-sp18-521/technology/hid-sp18-521.bib}
+
+\end{IU}
+\input{../hid-sp18-522/bio-swaroop-saurabh.tex}
+
+\begin{IU}
+
+hid-sp18-522
+
+\url{https://github.com/cloudmesh-community/hid-sp18-522}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-522/issues}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSFargate.tex}{abstract-AWSFargate.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-riotos-a.tex}{abstract-riotos-a.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSDeepLens.tex}{abstract-AWSDeepLens.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-TheGoLanguage.tex}{abstract-TheGoLanguage.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/abstract-AWSLightsail.tex}{abstract-AWSLightsail.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-522/blob/master//technology/hid-sp18-522.bib}{../hid-sp18-522/technology/hid-sp18-522.bib}
 
 \end{IU}
 \input{../hid-sp18-523/bio-tandon-ritesh.tex}
